Fixed word-wrap issues

--- a/wcfsetup/install/files/style/global.less
+++ b/wcfsetup/install/files/style/global.less
@@ -5,7 +5,7 @@ body {
 	font-family: @wcfBaseFontFamily;
 	font-size: @wcfBaseFontSize;
 	line-height: @wcfBaseLineHeight;
-	word-break: break-all;
+	word-wrap: break-word;
 }
 
 small {
